[package]
name = "file_encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rand = "0.8.4"
rsa = "0.9.6"
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
